@@ -40,6 +40,7 @@ Cacti CHANGELOG
 -bug#0001936: Removing multiple data sources is inefficient
 -bug#0001937: Technical support page uses check table which waits for table lock
 -bug#0001939: Do not query for number or items per host if concurrent polling processes is set to one
+-bug#0001954: Usage of PHP_SELF without basename in html.php (at least partly fixed)
 -bug#0001956: Attempts to update existing tree item fail
 -bug: Accept "Connection refused" on TCP ping tests
 -bug: Add missing row selection javascript to graph preview
